Ajout du Logo Booki

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+            <img src="./images/logo/Booki.png" class="logobooki" alt="Logo de Booki" width="61.09px" height="19px" >
+
+
+
+
+
+        </header>
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
