Rectification du LogoBooki, Ajout du Menu Nav

--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
 <body>
     <div class="main-container">
         <header>
-            <img src="./images/logo/Booki.png" class="logobooki" alt="Logo de Booki" width="61.09px" height="19px" >
-
+                    <nav>
+                        <div class="menu-container">
+                            <div class="element1">  <a href="#" class="hébergement">Hébergement</a> </div>   
+                            <div class="element2">  <a href="#" class="activités">Activités</a></div>  
+                        </div>                
+                    </nav>
+                    <img src="./images/logo/Booki.png" class="logobooki" alt="Logo de Booki" width="61.09px" height="19px" >
+                                
 
 
 
