--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                         </div>                
                     </nav>
                     <img src="./images/logo/Booki.png" class="logobooki" alt="Logo de Booki" width="61.09px" height="19px" >
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre-ville ou en pleine nature</p>
                                 
 
 
