--- a/index.html
+++ b/index.html
@@ -111,6 +111,33 @@
                     </div>
                 </section>
             </div>
+                <h3 class="activités-txt">Activités à Marseille</h3>
+                <section class="activités">
+                <div class="activités-card">
+                    <img class="activités-img" src="./images/activites/reno-laithienne.jpg" alt="Photo du Vieux-Port">
+                    <div class="container">
+                      <h4><b>Vieux Port</b></h4>                    
+                    </div>
+                  </div>
+                  <div class="activités-card">
+                    <img class="activités-img" src="./images/activites/paul-hermann.jpg" alt="Photo du Fort de Pomègues">
+                    <div class="container">
+                      <h4><b>Fort de Pomègues</b></h4>                    
+                    </div>
+                  </div>
+                  <div class="activités-card">
+                    <img class="activités-img" src="./images/activites/kilyan-sockalingum.jpg" alt="Photo du Parc national des Calanques">
+                    <div class="container">
+                      <h4><b>Parc national des Calanques</b></h4>                    
+                    </div>
+                  </div>
+                  <div class="activités-card">
+                    <img class="activités-img" src="./images/activites/florian-wehde.jpg" alt="Photo de Notre Dame de la Garde">
+                    <div class="container">
+                      <h4><b>Notre Dame de la Garde</b></h4>                    
+                    </div>
+                  </div>
+                </section>
         </main>
         <footer></footer>
     </div>
