Ajout du Footer

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <header>
                     <nav>
                         <div class="menu-container">
-                            <div class="element1">  <a href="#" class="hébergement">Hébergement</a> </div>   
-                            <div class="element2">  <a href="#" class="activités">Activités</a></div>  
+                            <div class="element1">  <a href="#linkhebergements" class="hébergement">Hébergement</a></div>   
+                            <div class="element2">  <a href="#linkactivites" class="activités">Activités</a></div>  
                         </div>                
                     </nav>
                     <img src="./images/logo/Booki.png" class="logobooki" alt="Logo de Booki" width="61.09px" height="19px" >
@@ -49,7 +49,7 @@
               
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
-                    <h2 class="section-title">Hébergements à Marseille</h2>
+                    <h2 class="section-title" id="linkhebergements">Hébergements à Marseille</h2>
                         <div class="hebergement-card">
                         <img class="hebergements-img" src="images/hebergements/fred-kleber.jpg">
                         <h3 class="card-title">Hôtel du port</h3>
@@ -124,7 +124,7 @@
                     </div>
                 </section>
             </div>
-                <h3 class="activités-txt">Activités à Marseille</h3>
+                <h2 class="activités-txt" id="linkactivites">Activités à Marseille</h2>
                 <section class="activités">
                 <div class="activités-card">
                     <img class="activités-img" src="./images/activites/reno-laithienne.jpg" alt="Photo du Vieux-Port">
@@ -152,7 +152,30 @@
                   </div>
                 </section>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="column">
+                <h3>À propos</h3>
+                <ul>
+                  <li>Fonctionnement du site</li>
+                  <li>Conditions générales</li>
+                  <li>Données et confidentialité</li>
+                </ul>
+              </div>
+              <div class="column">
+                <h3>Nos hébergements</h3>
+                <ul>
+                  <li>Charte qualité</li>
+                  <li>Proposer votre hotêl</li>                  
+                </ul>
+              </div>
+              <div class="column">
+                <h3>Assistance</h3>
+                <ul>
+                  <li>Centre d'aide</li>
+                  <li>Nous contacter</li>
+                </ul>
+              </div>
+        </footer>
     </div>
 </body>
 
