Mise à jour du menu

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <header>
                     <nav>
                         <div class="menu-container">
-                            <div class="element1">  <a href="#linkhebergements" class="hébergement">Hébergement</a></div>   
-                            <div class="element2">  <a href="#linkactivites" class="activités">Activités</a></div>  
+                            <div class="element1">  <a href="#linkhebergements" class="hebergement">Hébergement</a></div>   
+                            <div class="element2">  <a href="#linkactivites" class="activites">Activités</a></div>  
                         </div>                
                     </nav>
                     <img src="./images/logo/Booki.png" class="logobooki" alt="Logo de Booki">
@@ -48,7 +48,7 @@
                   
               
             <div class="hebergements-and-populaires">
-                <section class="hebergements">
+                <section id=linkhebergements class="hebergements">
                     <h2 class="section-title">Hébergements à Marseille</h2>
                   <div class="hebergements-cards">
                     <article class="card">
