Ajout des liens pour les cards

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <header>
                     <nav>
                         <div class="menu-container">
-                            <div class="element1">  <a href="#linkhebergements" class="hebergement">Hébergement</a></div>   
-                            <div class="element2">  <a href="#linkactivites" class="activites">Activités</a></div>  
+                            <div class="element1">  <a href="#linkhebergements" class="hebergement-color">Hébergement</a></div>   
+                            <div class="element2">  <a href="#linkactivites" class="activites-color">Activités</a></div>  
                         </div>                
                     </nav>
                     <img src="./images/logo/Booki.png" class="logobooki" alt="Logo de Booki">
@@ -51,8 +51,9 @@
                 <section id=linkhebergements class="hebergements">
                     <h2 class="section-title">Hébergements à Marseille</h2>
                   <div class="hebergements-cards">
+                    <a href="#">
                     <article class="card">
-                        <img src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hotel du port">
+                    <img src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hotel du port">
                         <div class="card-content">
                                 <h3 class="card-title">Hôtel du port</h3>
                                 <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
@@ -65,6 +66,8 @@
                             </div>
                             </div>
                     </article>
+                </a>
+                <a href="#">
                     <article class="card">
                         <img src="./images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hotel chez Amina">
                         <div class="card-content">
@@ -79,6 +82,8 @@
                             </div>
                             </div>
                     </article>
+                    </a>
+                    <a href="#">
                     <article class="card">
                         <img src="./images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hotel Les mouettes">
                         <div class="card-content">
@@ -93,6 +98,8 @@
                             </div>
                             </div>
                     </article>
+                    </a>
+                    <a href="#">
                     <article class="card">
                         <img src="./images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hotel de la mer">
                         <div class="card-content">
@@ -107,6 +114,8 @@
                             </div>
                             </div>
                     </article>
+                    </a>
+                    <a href="#">
                     <article class="card">
                         <img src="./images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'auberge de la canebière">
                         <div class="card-content">
@@ -121,6 +130,8 @@
                             </div>
                             </div>
                     </article>
+                </a>
+                <a href="#">
                     <article class="card">
                         <img src="./images/hebergements/nicate-lee.jpg" alt="Image de l'auberge le panier'">
                         <div class="card-content">
@@ -135,6 +146,7 @@
                             </div>
                             </div>
                     </article>
+                    </a>
                   </div>   
                 <p class="txttt">Afficher plus</p>
             
@@ -145,6 +157,7 @@
                         <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
                     </div>
                     <div class="populaires-cards">
+                        <a href="#">
                         <article class="card">
                             <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
@@ -162,6 +175,8 @@
                                 </div>
                             </div>
                         </article>
+                        </a>
+                        <a href="#">
                         <article class="card">
                             <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
@@ -179,6 +194,8 @@
                                 </div>
                             </div>
                         </article>
+                        </a>
+                        <a href="#">
                         <article class="card">
                             <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
@@ -196,35 +213,44 @@
                                 </div>
                             </div>
                         </article>
+                        </a>
                     </div>
                 </section>
             </div>
                 <h2 class="activités-txt" id="linkactivites">Activités à Marseille</h2>
                 <section class="activités">
+                    <a href="#">
                 <div class="activités-card">
                     <img class="activités-img" src="./images/activites/reno-laithienne.jpg" alt="Photo du Vieux-Port">
                     <div class="container">
                       <h4><b>Vieux Port</b></h4>                    
                     </div>
                   </div>
+                  </a>
+                  <a href="#">
                   <div class="activités-card">
                     <img class="activités-img" src="./images/activites/paul-hermann.jpg" alt="Photo du Fort de Pomègues">
                     <div class="container">
                       <h4><b>Fort de Pomègues</b></h4>                    
                     </div>
                   </div>
+                  </a>
+                  <a href="#">
                   <div class="activités-card">
                     <img class="activités-img" src="./images/activites/kilyan-sockalingum.jpg" alt="Photo du Parc national des Calanques">
                     <div class="container">
                       <h4><b>Parc national des Calanques</b></h4>                    
                     </div>
                   </div>
+                  </a>
+                  <a href="#">
                   <div class="activités-card">
                     <img class="activités-img" src="./images/activites/florian-wehde.jpg" alt="Photo de Notre Dame de la Garde">
                     <div class="container">
                       <h4><b>Notre Dame de la Garde</b></h4>                    
                     </div>
                   </div>
+                </a>
                 </section>
         </main>
         <footer>
