Optimisation du code pour le responsive

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <img src="./images/logo/Booki.png" class="logobooki" alt="Logo de Booki">
                 </header>
         <main>
+            <div class="tablette-topmain">
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <p class="txtt">En plein centre-ville ou en pleine nature</p>
                 <form action="#" method="get" class="search-form">
@@ -45,7 +46,7 @@
                     <div class="infobar">
                     <i class="fa-solid fa-info"></i><p class="infobar-txt">Plus de 500 logements sont disponibles dans cette ville</p>
                     </div>
-                  
+                </div>      
               
             <div class="hebergements-and-populaires">
                 <section id=linkhebergements class="hebergements">
