Avancement dans la version téléphone

--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
                         <div class="menu-container">
                             <div class="element1">  <a href="#linkhebergements" class="hebergement-color">Hébergement</a></div>   
                             <div class="element2">  <a href="#linkactivites" class="activites-color">Activités</a></div>  
-                        </div>                
-                    </nav>
+                        </div>      
+                   </nav>
                     <img src="./images/logo/Booki.png" class="logobooki" alt="Logo de Booki">
+                    <div class="menu-mobile">
+                        <div class="hebergement-txt">Hébergements</div> 
+                        <div class="activites-txt">Activités</div>
+                      </div>         
                 </header>
         <main>
             <div class="tablette-topmain">
