--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
                     <button class="filtre1"><i class="fa-solid fa-fire"></i>Nos pépites</button>
                     </div>
                     <div class="infobar">
-                    <i class="fa-solid fa-info"></i><p class="infobar-txt">Plus de 500 logements sont disponibles dans cette ville</p>
+                    <div class="info-logo">
+                        <i class="fa-solid fa-info">
+                            
+                        </div></i>
+                    <p class="infobar-txt">Plus de 500 logements sont disponibles dans cette ville</p>
                     </div>
                 </div>      
               
